# plover_svg_layout_display

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  dev-install.sh  pyproject.toml  setup.cfg
plover_svg_layout_display/: config_ui.py  layout_config.py  layout_ui.py  qt_utils.py  resources.qrc  svg_parser.py  svg_widget.py
plover_svg_layout_display/resources/uni/: generate.mjs  preview.html  uni_convert.py
