[metadata]
name = plover-svg-layout-display
version = 1.0.0
description = SVG-based layout display plugin for Plover
long_description = file: README.md
long_description_content_type = text/markdown
author = Kaoffie
author_email = kaoffie@gmail.com
url = https://github.com/Kaoffie/plover_svg_layout_display
license = MIT License (MIT)
license_file = LICENSE.txt
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Plugins
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
keywords = plover plover_plugin

[options]
zip_safe = False
include_package_data = True
install_requires =
    plover >= 5.0.0.dev3
    lxml >= 6.0.0
packages = 
    plover_svg_layout_display

[options.package_data]
plover_svg_layout_display =
    resources/uni/*.svg
    resources/uni/*.py

[options.entry_points]
plover.gui.qt.tool =
  svg_layout_display = plover_svg_layout_display.layout_ui:SVGLayoutDisplayTool
